if(BUILD_UTILITY_GEOMETRY_TO_WKB)
    message(STATUS "building utility geometry_to_wkb")
    add_subdirectory(geometry_to_wkb)
endif()
if(BUILD_UTILITY_MAPNIK_INDEX)
    message(STATUS "building utility mapnik-index")
    add_subdirectory(mapnik-index)
endif()
if(BUILD_UTILITY_MAPNIK_RENDER)
    message(STATUS "building utility mapnik-render")
    add_subdirectory(mapnik-render)
endif()
if(BUILD_UTILITY_OGRINDEX)
    message(STATUS "building utility ogrindex")
    message(WARNING "can't build ogrindex currently due to some bugs")
    #add_subdirectory(ogrindex) # missing include file shapeindex/quadtree.hpp
endif()
if(BUILD_UTILITY_PGSQL2SQLITE)
    message(STATUS "building utility pgsql2sqlite")
    add_subdirectory(pgsql2sqlite)
endif()
if(BUILD_UTILITY_SHAPEINDEX)
    message(STATUS "building utility shapeindex")
    add_subdirectory(shapeindex)
endif()
if(BUILD_UTILITY_SVG2PNG)
    message(STATUS "building utility svg2png")
    add_subdirectory(svg2png)
endif()
