if(BUILD_UTILITY_GEOMETRY_TO_WKB)
    add_subdirectory(geometry_to_wkb)
endif()
if(BUILD_UTILITY_MAPNIK_INDEX)
    add_subdirectory(mapnik-index)
endif()
if(BUILD_UTILITY_MAPNIK_RENDER)
    add_subdirectory(mapnik-render)
endif()
if(BUILD_UTILITY_OGRINDEX)
    message(WARNING "can't build ogrindex currently due to some bugs")
    #add_subdirectory(ogrindex) # missing include file shapeindex/quadtree.hpp
endif()
if(BUILD_UTILITY_PGSQL2SQLITE)
    add_subdirectory(pgsql2sqlite)
endif()
if(BUILD_UTILITY_SHAPEINDEX)
    add_subdirectory(shapeindex)
endif()
if(BUILD_UTILITY_SVG2PNG)
    add_subdirectory(svg2png)
endif()

add_subdirectory(mapnik-config)
