
libmapnikdir = $(pkgincludedir)

if HAVE_LIBXML2
libxml2_inc = \
  libxml2_loader.hpp
endif

libmapnik_HEADERS = \
	agg_renderer.hpp\
	attribute.hpp \
	attribute_collector.hpp \
	attribute_descriptor.hpp \
	color.hpp \
	color_factory.hpp \
	comparison.hpp \
	config.hpp \
  config_error.hpp \
	coord.hpp \
	coord_array.hpp \
	css_color_parser.hpp \
	ctrans.hpp \
	datasource.hpp \
	datasource_cache.hpp \
	distance.hpp \
	ellipsoid.hpp \
  enumeration.hpp \
	envelope.hpp \
	expression.hpp \
	factory.hpp \
	feature.hpp \
	feature_factory.hpp \
	feature_layer_desc.hpp \
	feature_style_processor.hpp \
	feature_type_style.hpp \
	fill.hpp \
	filter.hpp \
	filter_expression.hpp \
	filter_factory.hpp \
	filter_featureset.hpp \
	filter_parser.hpp \
	filter_parser_ast.hpp \
	filter_visitor.hpp \
	font_engine_freetype.hpp \
	gamma.hpp \
	geometry.hpp \
	geom_util.hpp \
	global.hpp \
	graphics.hpp \
	hit_test_filter.hpp \
	image_data.hpp \
	image_reader.hpp \
	image_util.hpp \
	image_view.hpp \
	label_collision_detector.hpp \
	label_placement.hpp \
	layer.hpp \
  ${libxml2_inc} \
	line_pattern_symbolizer.hpp \
	line_symbolizer.hpp \
	load_map.hpp \
	local_datasource.hpp \
	logical.hpp \
	map.hpp \
	math_expr.hpp \
	memory.hpp \
	memory_datasource.hpp \
	memory_featureset.hpp \
	params.hpp \
	placement_finder.hpp \
	plugin.hpp \
	point_symbolizer.hpp \
	polygon_pattern_symbolizer.hpp \
	polygon_symbolizer.hpp \
	pool.hpp \
	projection.hpp \
	proj_transform.hpp \
  ptree_helpers.hpp \
	quad_tree.hpp \
	query.hpp \
	raster.hpp \
	raster_symbolizer.hpp \
	regex_filter.hpp \
	rule.hpp \
	save_map.hpp \
	scale_denominator.hpp \
	shield_symbolizer.hpp \
	spatial.hpp \
	stroke.hpp \
	style.hpp \
	style_factory.hpp \
	symbolizer.hpp \
	text_path.hpp \
	text_symbolizer.hpp \
	unicode.hpp \
	utils.hpp \
	value.hpp \
	vertex.hpp \
	vertex_transform.hpp \
	vertex_vector.hpp \
	wkb.hpp

EXTRA_DIST = \
	$(libmapnik_HEADERS)

## File created by the gnome-build tools

